--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="A brief description" />
     <meta name="author" content="Saleh Ajam" />
     <!-- Open Graph Protocol-->
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
     <meta property="og:title" content="A brief description" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.mysite" />
